[package]
name = "nfs-mamont"
version = "0.0.0"
edition = "2021"
authors = ["Rmamonts"]
description = "A Rust NFS Server implementation"
publish = false
rust-version = "1.83.0"

[lib]
doctest = false

[dependencies]
tokio = { version = "1.49", features = ["full", "time"] }
byteorder = "1.5.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
